--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,39 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  --black:#171321;
+  --dkblue:#0d314b;
+  --plum:#4b0d49;
+  --hotmag:#ff17e4;
+  --magenta:#e310cb;
+  --aqua:#86fbfb;
+  --white:#f7f8fa;
+  --font-size: 1.3rem;
+  --mono: "Oxygen mono", monospace;
+  --sans: Oxygen ,sans-serif;
 }
 
+html{
+  box-sizing:border-box;
+}
 
+*,
+*::before,
+*::after{
+  box-sizing:inherit;
+}
+
+body{
+   padding:0;
+   margin:0;
+   font-family:var(--sans);
+   /* background-color:var(--black); */
+   /* color:var(--white); */
+   font-size:var(--font-size)
+}
+
+h1,h2,h3{
+  margin:0;
+}
+
+img{
+  width: 100%;
+}
