--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,8 +25,8 @@ body{
    padding:0;
    margin:0;
    font-family:var(--sans);
-   /* background-color:var(--black); */
-   /* color:var(--white); */
+   background-color:var(--black);
+   color:var(--white);
    font-size:var(--font-size)
 }
 
