--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,43 +1,51 @@
-:root{
-  --black:#171321;
-  --dkblue:#0d314b;
-  --plum:#4b0d49;
-  --hotmag:#ff17e4;
-  --magenta:#e310cb;
-  --aqua:#86fbfb;
-  --white:#f7f8fa;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+:root {
+  --black: #171321;
+  --dkblue: #0d314b;
+  --plum: #4b0d49;
+  --hotmag: #ff17e4;
+  --magenta: #e310cb;
+  --aqua: #86fbfb;
+  --white: #f7f8fa;
   --font-size: 1.3rem;
   --mono: "Oxygen mono", monospace;
-  --sans: Oxygen ,sans-serif;
+  --sans: Oxygen, sans-serif;
 }
 
-html{
-  box-sizing:border-box;
+html {
+  box-sizing: border-box;
 }
 
 *,
 *::before,
-*::after{
-  box-sizing:inherit;
+*::after {
+  box-sizing: inherit;
 }
 
-body{
-   padding:0;
-   margin:0;
-   font-family:var(--sans);
-   background-color:var(--black);
-   color:var(--white);
-   font-size:var(--font-size)
+body {
+  padding: 0;
+  margin: 0;
+  font-family: var(--sans);
+  background-color: var(--black);
+  color: var(--white);
+  font-size: var(--font-size);
 }
 
-h1,h2,h3{
-  margin:0;
+h1,
+h2,
+h3,
+ul {
+  margin: 0px;
+  padding: 0px;
 }
 
-img{
+img {
   width: 100%;
 }
 
-ul{
+ul {
   list-style: none;
 }
