--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,8 +29,8 @@ body {
   padding: 0;
   margin: 0;
   font-family: var(--sans);
-  background-color: var(--black);
-  color: var(--white);
+  background-color: var(--white);
+  color: var(--black);
   font-size: var(--font-size);
 }
 
